# docs/swagger.yaml
@@ -25,11 +25,16 @@ definitions:
         maxLength: 100
         minLength: 5
         type: string
+      year:
+        example: 1994
+        minimum: 1
+        type: integer
     required:
     - author
     - description
     - tags
     - title
+    - year
     type: object
   api.CreateReviewRequest:
     properties:
@@ -81,6 +86,14 @@ definitions:
     type: object
   api.DefaultResponse:
     properties:
+      code:
+        type: integer
+      message:
+        type: string
+    type: object
+  api.DefaultResponseWithBody:
+    properties:
+      body: {}
       code:
         type: integer
       message:
@@ -175,6 +188,10 @@ definitions:
         maxLength: 100
         minLength: 5
         type: string
+      year:
+        example: 1994
+        minimum: 1
+        type: integer
     type: object
   api.UpdateReviewRequest:
     properties:
@@ -206,6 +223,8 @@ definitions:
         type: string
       updated_at:
         type: string
+      year:
+        type: integer
     type: object
   entity.Review:
     properties:
@@ -352,6 +371,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/api.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -454,6 +477,26 @@ paths:
       summary: Update book by id. Requires MODERATOR role or higher
       tags:
       - Books
+  /healthcheck:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.DefaultResponse'
+        "494":
+          description: ""
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+      summary: Check if server is running
+      tags:
+      - Healthcheck
   /reviews/delete/{id}:
     delete:
       consumes:
@@ -551,13 +594,45 @@ paths:
       summary: Update review by ID
       tags:
       - Reviews
+  /user/{username}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Username of user
+        in: path
+        name: username
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Ok
+          schema:
+            $ref: '#/definitions/api.DefaultResponseWithBody'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+      summary: Get user by his username
+      tags:
+      - Users
   /user/delete:
     delete:
       produces:
       - application/json
       responses:
         "200":
-          description: user succesfully deleted
+          description: User succesfully deleted
           schema:
             $ref: '#/definitions/api.DefaultResponse'
         "400":
@@ -571,34 +646,6 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Delete user
-      tags:
-      - Users
-  /user/delete/{id}:
-    delete:
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: user succesfully deleted
-          schema:
-            $ref: '#/definitions/api.DefaultResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/api.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/api.ErrorResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: Delete user by his ID. Requires MODERATOR role or higher
       tags:
       - Users
   /user/login:
@@ -616,7 +663,7 @@ paths:
       - application/json
       responses:
         "201":
-          description: token succesfully created
+          description: Token succesfully created
           schema:
             $ref: '#/definitions/api.LoginResponse'
         "400":
@@ -672,7 +719,7 @@ paths:
       - application/json
       responses:
         "201":
-          description: token succesfully created
+          description: User succesfully updated
           schema:
             $ref: '#/definitions/api.LoginResponse'
         "400":
